# readmer

./: CHANGES.md  CITATION.cff  Makefile  README.md  Rakefile  dist-workspace.toml
.config/readmer/: README.md.j2  README.md.liquid  project.yaml  readmer-describe.sh-session  readmer-render.sh-session  readmer.sh-session
.config/readmer/dart/: README.md.liquid
.config/readmer/js/: README.md.liquid
.config/readmer/python/: README.md.liquid
.config/readmer/ruby/: README.md.liquid
.config/readmer/rust/: README.md.j2  README.md.liquid
dart/: Makefile  README.md  pubspec.yaml
dart/example/: readmer_example.dart
dart/lib/: readmer.dart
dart/test/: readmer_test.dart
data/: partials.csv  properties.csv  variables.csv
data/badge/: unlicense.md.liquid
data/footer/: share.md.liquid
data/header/badges/: rust.md.liquid
data/properties/: language.csv  package.csv
data/section/: development.md.liquid
js/: Makefile  README.md  package.json
python/: Makefile  README.md  pyproject.toml
python/src/readmer/: __init__.py
ruby/: .gemspec.yaml  CHANGES.md  Makefile  README.md  readmer.gemspec
ruby/lib/: readmer.rb
ruby/lib/readmer/: version.rb
rust/: Cargo.toml  Makefile  README.md
rust/data/badge/: dart-compat.liquid  dart-docs.liquid  dart-package.liquid  python-compat.liquid  python-package.liquid  ruby-compat.liquid  ruby-docs.liquid  ruby-package.liquid  rust-compat.liquid  rust-docs.liquid  rust-package.liquid  ts-compat.liquid  ts-package.liquid
rust/data/header/: toc.md.liquid
rust/data/header/badges/: dart.liquid  js.liquid  python.liquid  ruby.liquid  rust.liquid  ts.liquid
rust/data/section/: development.liquid
rust/etc/asciinema/: Makefile  demo.cast  demo.sh  install.cast  install.sh
rust/src/: config.rs  context.rs  engine.rs  error.rs  export.rs  lib.rs  main.rs  model.rs  path.rs  tools.rs  workspace.rs
rust/src/context/: dir.rs  temp.rs
rust/src/engine/: liquid.rs  minijinja.rs
rust/src/engine/liquid/: embed.rs  file.rs  stack.rs
rust/src/export/dart/: error.rs  load.rs  pubspec.rs
rust/src/export/js/: error.rs  load.rs  package.rs
rust/src/export/python/: error.rs  load.rs  pyproject.rs
rust/src/export/ruby/: error.rs  gemspec.rs  load.rs  specification.rs
rust/src/export/rust/: error.rs  load.rs  manifest.rs
rust/src/model/: load_error.rs  package.rs  project.rs
rust/src/model/package/: dart.rs  js.rs  python.rs  ruby.rs  rust.rs
rust/src/path/: rooted_path.rs
rust/src/tools/: git.rs
rust/wix/: main.wxs
