# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "readmer"
version = "0.0.2"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Compose README.md files from Jinja2 or Liquid templates."
#documentation = "https://docs.rs/readmer"
readme = true
homepage = "https://readmer.dev"
repository = "https://github.com/artob/readmer"
license = "Unlicense"
keywords = ["readme", "markdown"]
categories = ["command-line-utilities", "development-tools", "template-engine", "text-processing"]
publish = true

# See: https://readmer.dev
[package.metadata.readmer.subproject]
name = "Readmer"
title = "Readmer"
summary = "Readmer composes `README.md` files from Jinja2 or Liquid templates."

[features]
default = ["all", "std"]
all = ["engines", "languages"]
alloc = ["dogma/alloc"]
cli = ["std", "dep:clap", "dep:tracing-subscriber", "clientele/default", "clientele/tracing"]
std = ["alloc", "derive_more/std", "dogma/std", "liquid?/stdlib", "minijinja?/std_collections"]
unstable = []

# Engines:
engines = ["jinja2", "liquid"]
jinja2 = ["dep:minijinja"]
liquid = ["dep:liquid"]

# Languages:
languages = ["rust"]
rust = []

[dependencies]
camino = { version = "1.2", default-features = false }
cargo_toml = { version = "1.0", default-features = false }
clientele = { version = "0.3.8", default-features = false, features = ["camino"] }
derive_more = { version = "2", default-features = false, features = ["display", "from_str"] }
dogma = { version = "0.2.1", default-features = false, features = ["camino"] }
dyn-clone = { version = "1.0", default-features = false }
figment2 = { version = "0.11", default-features = false, features = ["env", "yaml"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false }

# Engines:
liquid = { version = "0.26", default-features = false, optional = true }
minijinja = { version = "2.21", default-features = false, features = ["json", "serde"], optional = true }

# CLI:
clap = { version = "4.5", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"], optional = true }

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "readmer"
path = "src/main.rs"
required-features = ["cli"]
